<resources>
    <string name="app_name">QuotationFrontendApp</string>
    <string name="username_or_email">Username/Email</string>
    <string name="have_no_account">Don\'t have an account?</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="edit_user_details">Edit User Details</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>