<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_user_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/registerBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- Title -->
        <TextView
            android:id="@+id/txtUpdateUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_user_details"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp" />

        <!-- Username Input -->
        <EditText
            android:id="@+id/edtUsernameEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:background="@drawable/input_bg"
            android:layout_below="@id/txtUpdateUser"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:autofillHints="username"/>

        <!-- Email Input -->
        <EditText
            android:id="@+id/edtEmailEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_bg"
            android:layout_below="@id/edtUsernameEdit"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/edtPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/input_bg"
            android:layout_below="@id/edtEmailEdit"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="password" />

        <!-- Button Row -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtPasswordEdit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdateUser"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:backgroundTint="#FF9800"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/btnDeleteUser"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:backgroundTint="#F44336"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>