<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="16dp">

    <!-- Top Register Block -->
    <RelativeLayout
        android:id="@+id/registerBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- Title -->
        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:paddingBottom="10dp" />

        <!-- Username Input -->
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:background="@drawable/input_bg"
            android:layout_below="@id/txtRegister"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:inputType="text"
            android:autofillHints="username"/>

        <!-- Email Input -->
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_bg"
            android:layout_below="@id/edtUsername"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress" />

        <!-- Password Input -->
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/input_bg"
            android:layout_below="@id/edtEmail"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints="password" />

        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@id/edtPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:backgroundTint="#FF9800"
            android:textColor="#FFFFFF"
            />
    </RelativeLayout>

    <!-- Already Have Account Block -->
    <RelativeLayout
        android:id="@+id/loginBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:padding="20dp"
        android:layout_below="@+id/registerBlock"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- Already Have Account Text -->
        <TextView
            android:id="@+id/txtExisting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="#000000"
            android:textColor="#FFFFFF"
            android:layout_below="@id/txtExisting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>

</RelativeLayout>